tests/reference/asr-incorrect_type_where_02-1746f84.stderr
semantic error: 'where' clause requires a logical array
 --> tests/errors/incorrect_type_where_02.f90:5:10
  |
5 |    where(1) b = 12121
  |          ^ 
